--- a/style.css
+++ b/style.css
@@ -1,262 +1,271 @@
-         .header {
-             color: aliceblue;
-             background-color: rgba(0, 0, 0, 0.562);
-             text-align: center;
-             border-radius: 20px;
-             padding: 30px;
-             width: 1100px;
-             margin: auto;
-         }
-         
-         .header h3 {
-             color: rgba(240, 255, 252, 0.692);
-             margin-bottom: 30px;
-             margin-top: 0px;
-         }
-         
-         .header .nav .rect {
-             color: aliceblue;
-             text-decoration: none;
-             margin-left: 20px;
-             padding-bottom: 50px;
-         }
-         
-         .header h1 {
-             font-size: 40px;
-             margin-top: 8px;
-         }
-         
-         .header .nav .rect:hover {
-             color: yellow;
-             text-decoration: none;
-             margin-left: 20px;
-         }
-         
-         #about {
-             width: 1100px;
-             background-color: beige;
-             margin: auto;
-             border-radius: 20px;
-             padding: 30px;
-             width: 1100px;
-             margin-top: 30px;
-             position: relative;
-         }
-         
-         #about h3 {
-             font-weight: bold;
-             font-size: x-large;
-         }
-         
-         .cardd {
-             width: 150px;
-             text-align: center;
-             background-color: purple;
-             padding-left: 30px;
-             position: absolute;
-             top: 130px;
-             border-radius: 20px;
-             padding-right: 30px;
-             padding-top: 0px;
-             padding-bottom: 0px;
-             margin-top: 11px;
-             line-height: 20px;
-         }
-         
-         body {
-             background-color: rgb(182, 182, 182);
-         }
-         
-         .imag {
-             border-radius: 50%;
-             display: block;
-             margin: 0 auto;
-             text-align: center;
-         }
-         
-         #skills {
-             background-image: url(./image/istockphoto-1388635225-1024x1024.jpg);
-             width: 1100px;
-             margin: auto;
-             border-radius: 20px;
-             padding: 30px;
-             width: 1100px;
-             margin-top: 30px;
-         }
-         
-         #skills h3 {
-             font-weight: bold;
-             font-size: x-large;
-         }
-         
-         .part-skills {
-             background-color: beige;
-             padding: 10px;
-             border-radius: 9px;
-         }
-         
-         .button-skills {
-             padding: 14px;
-             background-color: rgb(9, 151, 9);
-             margin: 0 auto;
-             margin-right: 11px;
-             color: white;
-             border-radius: 5px;
-             border: 1px solid rgb(9, 151, 9);
-             transition: transform 0.1s ease, box-shadow 0.1s ease;
-             opacity: .5;
-         }
-         
-         .button-skills:active {
-             transform: translateY(-5px);
-             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-             opacity: 1;
-         }
-         
-         #project {
-             width: 1100px;
-             background-color: beige;
-             margin: auto;
-             border-radius: 20px;
-             padding: 30px;
-             width: 1100px;
-             margin-top: 30px;
-         }
-         
-         #project h3 {
-             font-weight: bold;
-             font-size: x-large;
-         }
-         
-         .project-cardd {
-             width: 150px;
-             text-align: center;
-             background-color: rgb(36, 5, 177);
-             padding-left: 30px;
-             position: relative;
-             top: 0px;
-             border-radius: 20px;
-             padding-right: 30px;
-             padding-top: 0px;
-             padding-bottom: 8px;
-             margin-top: 8px;
-             line-height: 20px;
-         }
-         
-         .project-cardd2 {
-             width: 150px;
-             text-align: center;
-             background-color: rgb(88, 163, 3);
-             padding-left: 30px;
-             position: relative;
-             top: 20px;
-             border-radius: 20px;
-             padding-right: 30px;
-             padding-top: 0px;
-             padding-bottom: 11px;
-             margin-top: 5px;
-             line-height: 20px;
-         }
-         
-         .platform {
-             background-color: rgb(75, 74, 74);
-             text-align: center;
-             padding-bottom: 200px;
-             position: relative;
-             border-radius: 10px;
-             width: 1155px;
-             padding-top: 20px;
-         }
-         
-         .platform h4 {
-             margin-bottom: 3px;
-         }
-         
-         .platform p {
-             margin-top: 0;
-         }
-         
-         label {
-             display: block;
-         }
-         
-         input {
-             display: block;
-             width: 1108px;
-             padding: 9px;
-             border-radius: 9px;
-             margin-top: 9px;
-             border-color: white;
-             outline: none;
-         }
-         
-         input:focus {
-             border-color: white;
-             padding: 11px;
-         }
-         
-         #contact {
-             width: 1100px;
-             background-color: beige;
-             margin: auto;
-             border-radius: 20px;
-             padding: 30px;
-             margin-top: 30px;
-         }
-         
-         textarea {
-             width: 1122px;
-             margin-top: 9px;
-             outline: none;
-             border-color: white;
-         }
-         
-         textarea:focus {
-             border-color: white
-         }
-         
-         .input-button {
-             border: 1px solid green;
-             color: green;
-             cursor: pointer;
-             padding: 15px;
-             border-radius: 5px;
-             margin-top: 9px;
-             transition: background-color 0.3s ease, color 0.3s ease;
-         }
-         
-         .input-button:active {
-             background-color: green;
-             color: white;
-         }
-         
-         footer {
-             width: 1100px;
-             margin: auto;
-             padding: 5px 30px;
-             margin-top: 30px;
-             background-color: rgba(0, 0, 0, 0.562);
-             color: white;
-             text-align: center;
-             border-radius: 5px;
-         }
-         
-         a {
-             color: aliceblue;
-             text-decoration: none;
-         }
-         
-         a:hover {
-             color: yellow;
-             text-decoration: none;
-         }
-         
-         .go {
-             position: fixed;
-             padding: 15px;
-             right: 9px;
-             bottom: 9px;
-             background-color: blue;
-             font-size: larger;
-             border-radius: 5px;
-         }
+             .header {
+                 color: aliceblue;
+                 background-color: rgba(0, 0, 0, 0.562);
+                 text-align: center;
+                 border-radius: 20px;
+                 padding: 30px;
+                 width: 1100px;
+                 margin: auto;
+             }
+             
+             .header h3 {
+                 color: rgba(240, 255, 252, 0.692);
+                 margin-bottom: 30px;
+                 margin-top: 0px;
+             }
+             
+             .header .nav .list {
+                 display: inline;
+             }
+             
+             .header .nav .list .rect {
+                 color: aliceblue;
+                 text-decoration: none;
+                 margin-left: 20px;
+                 padding-bottom: 50px;
+             }
+             
+             .header h1 {
+                 font-size: 40px;
+                 margin-top: 8px;
+             }
+             
+             .header .nav .rect:hover {
+                 color: yellow;
+                 text-decoration: none;
+                 margin-left: 20px;
+             }
+             
+             #about {
+                 width: 1100px;
+                 background-color: beige;
+                 margin: auto;
+                 border-radius: 20px;
+                 padding: 30px;
+                 width: 1100px;
+                 margin-top: 30px;
+                 position: relative;
+             }
+             
+             #about h3 {
+                 font-weight: bold;
+                 font-size: x-large;
+             }
+             
+             .cardd {
+                 width: 150px;
+                 text-align: center;
+                 background-color: purple;
+                 padding-left: 30px;
+                 position: absolute;
+                 top: 130px;
+                 border-radius: 20px;
+                 padding-right: 30px;
+                 padding-top: 0px;
+                 padding-bottom: 0px;
+                 margin-top: 11px;
+                 line-height: 20px;
+             }
+             
+             body {
+                 background-color: rgb(182, 182, 182);
+             }
+             
+             .imag {
+                 border-radius: 50%;
+                 display: block;
+                 margin: 0 auto;
+                 text-align: center;
+             }
+             
+             #skills {
+                 background-image: url(./image/istockphoto-1388635225-1024x1024.jpg);
+                 width: 1100px;
+                 margin: auto;
+                 border-radius: 20px;
+                 padding: 30px;
+                 width: 1100px;
+                 margin-top: 30px;
+                 background-repeat: no-repeat;
+                 background-position: center;
+                 background-size: cover;
+             }
+             
+             #skills h3 {
+                 font-weight: bold;
+                 font-size: x-large;
+             }
+             
+             .part-skills {
+                 background-color: beige;
+                 padding: 10px;
+                 border-radius: 9px;
+             }
+             
+             .button-skills {
+                 padding: 14px;
+                 background-color: rgb(9, 151, 9);
+                 margin: 0 auto;
+                 margin-right: 11px;
+                 color: white;
+                 border-radius: 5px;
+                 border: 1px solid rgb(9, 151, 9);
+                 transition: transform 0.1s ease, box-shadow 0.1s ease;
+                 opacity: .5;
+             }
+             
+             .button-skills:active {
+                 transform: translateY(-5px);
+                 box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+                 opacity: 1;
+                 cursor: pointer;
+             }
+             
+             #project {
+                 width: 1100px;
+                 background-color: beige;
+                 margin: auto;
+                 border-radius: 20px;
+                 padding: 30px;
+                 width: 1100px;
+                 margin-top: 30px;
+             }
+             
+             #project h3 {
+                 font-weight: bold;
+                 font-size: x-large;
+             }
+             
+             .project-cardd {
+                 width: 150px;
+                 text-align: center;
+                 background-color: rgb(36, 5, 177);
+                 padding-left: 30px;
+                 position: relative;
+                 top: 0px;
+                 border-radius: 20px;
+                 padding-right: 30px;
+                 padding-top: 0px;
+                 padding-bottom: 8px;
+                 margin-top: 8px;
+                 line-height: 20px;
+             }
+             
+             .project-cardd2 {
+                 width: 150px;
+                 text-align: center;
+                 background-color: rgb(88, 163, 3);
+                 padding-left: 30px;
+                 position: relative;
+                 top: 20px;
+                 border-radius: 20px;
+                 padding-right: 30px;
+                 padding-top: 0px;
+                 padding-bottom: 11px;
+                 margin-top: 5px;
+                 line-height: 20px;
+             }
+             
+             .platform {
+                 background-color: rgb(75, 74, 74);
+                 text-align: center;
+                 padding-bottom: 200px;
+                 position: relative;
+                 border-radius: 10px;
+                 width: 1155px;
+                 padding-top: 20px;
+             }
+             
+             .platform h4 {
+                 margin-bottom: 3px;
+             }
+             
+             .platform p {
+                 margin-top: 0;
+             }
+             
+             label {
+                 display: block;
+             }
+             
+             input {
+                 display: block;
+                 width: 1108px;
+                 padding: 9px;
+                 border-radius: 9px;
+                 margin-top: 9px;
+                 border-color: white;
+                 outline: none;
+             }
+             
+             input:focus {
+                 border-color: white;
+                 padding: 11px;
+             }
+             
+             #contact {
+                 width: 1100px;
+                 background-color: beige;
+                 margin: auto;
+                 border-radius: 20px;
+                 padding: 30px;
+                 margin-top: 30px;
+                 position: static;
+             }
+             
+             textarea {
+                 width: 1122px;
+                 margin-top: 9px;
+                 outline: none;
+                 border-color: white;
+             }
+             
+             textarea:focus {
+                 border-color: white
+             }
+             
+             .input-button {
+                 border: 1px solid green;
+                 color: green;
+                 cursor: pointer;
+                 padding: 15px;
+                 border-radius: 5px;
+                 margin-top: 9px;
+                 transition: background-color 0.3s ease, color 0.3s ease;
+             }
+             
+             .input-button:active {
+                 background-color: green;
+                 color: white;
+             }
+             
+             footer {
+                 width: 1100px;
+                 margin: auto;
+                 padding: 5px 30px;
+                 margin-top: 30px;
+                 background-color: rgba(0, 0, 0, 0.562);
+                 color: white;
+                 text-align: center;
+                 border-radius: 5px;
+             }
+             
+             a {
+                 color: aliceblue;
+                 text-decoration: none;
+             }
+             
+             a:hover {
+                 color: yellow;
+                 text-decoration: none;
+             }
+             
+             .go {
+                 position: fixed;
+                 padding: 15px;
+                 right: 9px;
+                 bottom: 9px;
+                 background-color: blue;
+                 font-size: larger;
+                 border-radius: 5px;
+             }
