--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     
     .header .nav .list {
         display: inline;
+        list-style-type: none;
     }
     
     .header .nav .list .rect {
